# macos-stream-to-web

./: app.py  pyproject.toml
source/: screen.py
source/core/compression/: pako_deflate.py
source/core/graphics/: AbstractScreen.py  CG.py
source/modules/get_windows/macos/: models.py
source/modules/graphics/macos/: Screen.py  models.py
static/: stream.html
